# axon

./: .dockerignore  .gitignore  AMDINSTALL.md  CHANGES.txt  PHASE-A.md  PHASE-B.md  README.md  REAL_WORLD_TEST_PLAN.md  RUNNING.md  SETUP-GUIDE.html (DOWNLOAD AND OPEN FOR GUIDANCE)  requirements-amd.txt  requirements-base.txt  requirements.txt
coordinator/: go.mod
docker/: coordinator.Dockerfile  node-agent.Dockerfile  server.Dockerfile  two-node.compose.yaml
docs/: service_protocol.md  wan-routable.md
node/: pyproject.toml  requirements.txt
node/src/: agent.py  cli.py
node/src/api/: __init__.py  app.py
node/src/axon_quic/: __init__.py  coordinator_store.py  gloo_socket_env.py  process_group.py  sidecar_client.py  wire.py  work.py
node/src/coordinator/: __init__.py  client.py  models.py  ws_client.py
node/src/hardware/: __init__.py
node/src/runtime/: __init__.py  lifecycle.py  state.py  strategy.py
node/src/topology/: __init__.py  assignment.py  models.py
node/src/transport/: __init__.py  hole_punch.py  models.py  p2p.py  port_forward.py  quic_conn.py  sidecar.py
node/src/workers/: __init__.py  axon_executor.py  ray_worker.py  vllm_launcher.py  vllm_worker.py
node/tests/: test_axon_coordinator_store.py  test_axon_e2e_loopback.py  test_axon_executor_subprocess.py  test_axon_process_group.py  test_axon_sidecar_protocol.py  test_axon_wire.py  test_axon_work.py  test_gloo_socket_env.py  test_hole_punch_stun.py  test_p2p_transport.py  test_runtime_lifecycle.py  test_transport_models.py  test_ws_client.py
scripts/: build_vllm_rocm_source.sh  start.sh  (+8 more)
(+25 files in other folders)
