[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "axon-node"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vllm.general_plugins"]
axon_quic = "axon_quic:_load_plugin"
